feat/perf: Enhance feed & search UX, optimize queries, and AI detection (#91)
* perf(backend): optimize feed and search queries to prevent N+1 bottlenecks

* perf(ai): optimize face detection by confidence

* feat(android): implement feed loading indicator and enhance search UX

- Added infinite scroll loading spinner in Newsfeed.

- Implemented double-tap on BottomNav to scroll to top and refresh.

- Fixed infinite loading bugs in Search tabs.

* refactor(config): restructure AI detection properties

* feat(post): redirect to following feed mode after successful post creation